--- a/css/styles.css
+++ b/css/styles.css
@@ -34,7 +34,7 @@ h3{
 }
 .Git{
 width: 70%;
-text-align: centre;
+text-align: center;
 }
 p{
   line-height: 2;
@@ -131,6 +131,7 @@ a{
   font-size: 20px;
   padding: 10px 20px 10px 20px;
   text-decoration: none;
+  width:15%;
 }
 
 .btn:hover {
@@ -141,4 +142,5 @@ a{
   background-image: -o-linear-gradient(top, #30e3cb, #2bc4ad);
   background-image: linear-gradient(to bottom, #30e3cb, #2bc4ad);
   text-decoration: none;
+width:15%;
 }
