--- a/css/styles.css
+++ b/css/styles.css
@@ -30,8 +30,9 @@ spans {
 h3{
   font-family: 'Montserrat','sans-serif';
   color:#11999E;
-  font-weight: normal;
+  font-size: 1rem;
 }
+
 p{
   line-height: 2;
 }
@@ -42,15 +43,9 @@ hr{
   margin: 100px auto 100px auto;
 }
 
-a{
-  color: #11999E;
-}
 
 .myImage{
   height: 300px;
-}
-.footer{
- width :50%;
 }
 
 
@@ -61,6 +56,7 @@ a{
 }
 .middle-container{
   padding-top: 100px;
+  position: relative;
 
 }
 .bottom-container{
@@ -69,9 +65,15 @@ a{
   padding: 50px 0 20px;
 }
 
+a{color: #11999E;
+  font-family: 'Montserrat','sans-serif';
+  margin: 10px 20px 20px ;
+  text-decoration: none;
 
-.pro{
-  text-decoration: underline;
+}
+a:hover{
+    color: #EAF6F6;
+
 }
 
 .intro{
@@ -112,7 +114,18 @@ a{
   width: 25%;
   float: left;
   margin-right: 30px;
+  margin-top: 20px;
 }
+
+.copyright{
+  text-align: center;
+  color: EAF6F6;
+  font-size: 0.75rem;
+  padding: 20px 0 20px 0;
+
+}
+
+
 
 
 .btn {
@@ -130,7 +143,7 @@ a{
   font-size: 20px;
   padding: 10px 20px 10px 20px;
   text-decoration: none;
-  width:15%;
+  width: 15%;
 }
 
 .btn:hover {
@@ -141,5 +154,5 @@ a{
   background-image: -o-linear-gradient(top, #30e3cb, #2bc4ad);
   background-image: linear-gradient(to bottom, #30e3cb, #2bc4ad);
   text-decoration: none;
-width:15%;
+  width: 25%;
 }
